// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test: Checkbox[site/pages/components/Checkbox/example-01-base.js] 1`] = `
<label>
  <input />
  <i />
  <span>
    Checkbox
  </span>
</label>
`;

exports[`Snapshot test: Checkbox[site/pages/components/Checkbox/example-02-checked.js] 1`] = `
<div>
  <label>
    <input />
    <i />
    <span>
      not checked
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      checked
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      indeterminate
    </span>
  </label>
</div>
`;

exports[`Snapshot test: Checkbox[site/pages/components/Checkbox/example-03-value.js] 1`] = `
<label>
  <input />
  <i />
  <span>
    value is "ok"
  </span>
</label>
`;

exports[`Snapshot test: Checkbox[site/pages/components/Checkbox/example-04-rawgroup.js] 1`] = `
<div>
  <label>
    <input />
    <i />
    <span>
      red
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      orange
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      yellow
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      green
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      cyan
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      blue
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      violet
    </span>
  </label>
</div>
`;

exports[`Snapshot test: Checkbox[site/pages/components/Checkbox/example-05-group.js] 1`] = `
<div>
  <label>
    <input />
    <i />
    <span>
      <span>
        red
      </span>
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      <span>
        orange
      </span>
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      <span>
        yellow
      </span>
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      <span>
        green
      </span>
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      <span>
        cyan
      </span>
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      <span>
        blue
      </span>
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      <span>
        violet
      </span>
    </span>
  </label>
</div>
`;

exports[`Snapshot test: Checkbox[site/pages/components/Checkbox/example-06-format.js] 1`] = `
<div>
  <label>
    <input />
    <i />
    <span>
      <span>
        red
      </span>
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      <span>
        orange
      </span>
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      <span>
        yellow
      </span>
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      <span>
        green
      </span>
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      <span>
        cyan
      </span>
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      <span>
        blue
      </span>
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      <span>
        violet
      </span>
    </span>
  </label>
</div>
`;

exports[`Snapshot test: Checkbox[site/pages/components/Checkbox/example-07-datum.js] 1`] = `
<div>
  <label>
    <input />
    <i />
    <span>
      <span>
        red
      </span>
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      <span>
        orange
      </span>
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      <span>
        yellow
      </span>
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      <span>
        green
      </span>
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      <span>
        cyan
      </span>
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      <span>
        blue
      </span>
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      <span>
        violet
      </span>
    </span>
  </label>
</div>
`;

exports[`Snapshot test: Checkbox[site/pages/components/Checkbox/example-08-block.js] 1`] = `
<div>
  <label>
    <input />
    <i />
    <span>
      red
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      orange
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      yellow
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      green
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      cyan
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      blue
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      violet
    </span>
  </label>
</div>
`;

exports[`Snapshot test: Checkbox[site/pages/components/Checkbox/example-09-disabled.js] 1`] = `
<div>
  <div>
    <label>
      <input />
      <i />
      <span>
        red
      </span>
    </label>
    <label>
      <input />
      <i />
      <span>
        orange
      </span>
    </label>
    <label>
      <input />
      <i />
      <span>
        yellow
      </span>
    </label>
    <label>
      <input />
      <i />
      <span>
        green
      </span>
    </label>
    <label>
      <input />
      <i />
      <span>
        cyan
      </span>
    </label>
    <label>
      <input />
      <i />
      <span>
        blue
      </span>
    </label>
    <label>
      <input />
      <i />
      <span>
        violet
      </span>
    </label>
  </div>
  <br />
  <label>
    <input />
    <i />
    <span>
      not checked
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      checked
    </span>
  </label>
  <label>
    <input />
    <i />
    <span>
      indeterminate
    </span>
  </label>
</div>
`;

exports[`Snapshot test: Checkbox[site/pages/components/Checkbox/example-10-disabled.js] 1`] = `
<div>
  <div>
    <label>
      <input />
      <i />
      <span>
        red
      </span>
    </label>
    <label>
      <input />
      <i />
      <span>
        orange
      </span>
    </label>
    <label>
      <input />
      <i />
      <span>
        yellow
      </span>
    </label>
    <label>
      <input />
      <i />
      <span>
        green
      </span>
    </label>
    <label>
      <input />
      <i />
      <span>
        cyan
      </span>
    </label>
    <label>
      <input />
      <i />
      <span>
        blue
      </span>
    </label>
    <label>
      <input />
      <i />
      <span>
        violet
      </span>
    </label>
  </div>
</div>
`;

exports[`Snapshot test: Checkbox[site/pages/components/Checkbox/example-11-input.js] 1`] = `
<label>
  <input />
  <i />
  <span>
    more...
  </span>
</label>
`;
